# nodescope

./: .gitignore  CHANGES.md  Cargo.toml  contributing.md  deny.toml  docker-compose.yml  flake.nix  justfile  license  nodescope.yml  readme.md
.github/workflows/: check-code.yml  e2e.yml  typos.yml
app/: Cargo.toml
app/migrations/: 001_initial_schema.sql
app/src/: db.rs  lib.rs
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  main.rs
daemon/: Cargo.toml
daemon/src/: lib.rs
dashboard/: README.md  index.html  package.json  pnpm-lock.yaml
dashboard/src/: App.vue
dashboard/src/assets/: base.css  main.css
dashboard/src/components/: LoadingSpinner.vue  MessagesView.vue  PeerConnectionsList.vue
dashboard/src/composables/: useMessages.ts  usePeerConnections.ts
dashboard/src/lib/: graphql.ts
dashboard/src/router/: index.ts
dashboard/src/views/: AboutView.vue  HomeView.vue  MessagesView.vue  PeersView.vue
proxy/: Cargo.toml
proxy/src/: bitcoin_protocol.rs  config.rs  connection.rs  lib.rs  socks5.rs
scripts/: run-e2e.sh
server/: Cargo.toml
server/src/: config.rs  lib.rs
server/src/graphql/: mod.rs  schema.rs
