[workspace]
resolver = "2"
members = [
  "app",
  "cli",
  "proxy",
  "server"
]

[workspace.dependencies]
anyhow = "1.0.100"
async-graphql = { version = "7.0.17", default-features = false, features = [
  "dataloader",
  "chrono",
  "playground",
  "tempfile",
] }
async-graphql-axum = "7.0.17"
axum = { version = "0.8.6", features = ["macros"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
mime_guess = "2.0"
rust-embed = "8"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
  "signal",
] }
tower-http = "0.6.5"
