[package]
name = "nodescope-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
app = { path = "../app" }
proxy = { path = "../proxy" }
server = { path = "../server" }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
