[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
app = { path = "../app" }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
mime_guess = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
